<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ivory">

    <TextView
        android:id="@+id/reverbTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/reverb"
        android:textAllCaps="true"
        android:textColor="@color/purple"
        android:textColorHighlight="@color/redviolet"
        android:textSize="32dp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/skl_emblem"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:src="@drawable/schoologo" />

    <TextView
        android:id="@+id/schoolTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:text="@string/school"
        android:textAllCaps="true"
        android:textColor="@color/purple"
        android:textColorHighlight="@color/redviolet"
        android:textSize="32dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_LogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skl_emblem"
        android:layout_centerInParent="true"
        android:text="@string/log_in"
        android:textColor="@color/dark_red"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/text_LogIn"
        android:text="@string/text_username" />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_LogIn"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/text_username"
        android:hint="@string/usernameHint" />

    <TextView
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_username"
        android:layout_marginTop="20dp"
        android:text="@string/text_password" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_username"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/text_password"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:textSize="8dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_password"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:text="@string/log_in" />

    <TextView
        android:id="@+id/textViewSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerInParent="true"
        android:layout_marginTop="17dp"
        android:text="@string/txt_signIn"
        android:textColor="@color/dark_red" />
</RelativeLayout>
